@@ -184,6 +184,7 @@ Chronological list of authors
   - Tamandeep Singh
   - Mingyi Xue
   - Meghan Osato
+  - Anirvinya G
 
 External code
 -------------
